Add new image to file folder, update CSS, and update HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <title>Cocktail Mood Recipes</title>
 </head>
 <body>
-
+    <div class="hide" id="error-banner"></div>
+    <div class="section" id="header-section"></div>
+        <h2>Mood Cocktails</h2>
+        <div id="header-img"></div>
+    <div class="section" id="select-cocktail"></div>
+    <div class="section" id="cocktail-recipe"></div>
+    <div class="section" id="favorites"></div>
+    <div class="section" id="branding"></div>
 </body>
 </html>
