Add CSS image styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="hide" id="error-banner"></div>
     <div class="section" id="header-section"></div>
-        <h2>Mood Cocktails</h2>
+        <h2>Mood Cocktails</h2>        
+    <div class="section" id="background"></div>
         <div id="header-img"></div>
     <div class="section" id="select-cocktail"></div>
     <div class="section" id="cocktail-recipe"></div>
@@ -20,3 +21,4 @@
     <div class="section" id="branding"></div>
 </body>
 </html>
+
