update CSS for header styling. Edit header HTML

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <title>Cocktail Mood Recipes</title>
 </head>
 <body>
-    <div class="hide" id="error-banner"></div>
-    <div class="section" id="header-section"></div>
-        <h2>Mood Cocktails</h2>        
-    <div class="section" id="background"></div>
-        <div id="header-img"></div>
+    <div class="hide" id="error-banner"></div>    
+    <div class="section" id="image-background">
+        <div id="background-img"></div>
+    </div> 
+    <header class="header" id="header-section">
+        <h1>Cocktail Mood Recipes</h1>
+        <p>Get the cocktail recipe that matches your mood</p> 
+    </header>    
+    <div class="section" id="select-cocktail"></div>    
     <div class="section" id="select-cocktail"></div>
     <div class="section" id="cocktail-recipe"></div>
     <div class="section" id="favorites"></div>
