Add two button dropdowns for mood and spirit choices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
         <h1>Cocktail Mood Recipes</h1>
         <p>Get the cocktail recipe that matches your mood</p> 
     </header>    
-    <div class="section" id="select-cocktail"></div>    
+    <div class="section" id="select-cocktail"></div>
+        <div class="What's your mood?">
+            <button class="dropDownBtn" id="mood-btn" >Dropdown</button>
+            <div class="dropdown-content">
+                <a href="#">Anxious</a>
+                <a href="#">Glamorous</a>
+                <a href="#">Happy</a>
+                <a href="#">Nervous</a>
+                <a href="#">Relaxed</a>
+                <a href="#">Stressed</a>
+            </div>
+
+            <div class="What's your choice of spirit?">
+                <button class="dropDownBtn" id="mood-btn" >Dropdown</button>
+                <div class="dropdown-content">
+                    <a href="#">Bourbon</a>
+                    <a href="#">Brandy</a>
+                    <a href="#">Gin</a>
+                    <a href="#">Tequila</a>
+                    <a href="#">Rum</a>
+                    <a href="#">Vodka</a>
+                    <a href="#">Whiskey</a>
+                </div>
+        </div>
+        
     <div class="section" id="select-cocktail"></div>
     <div class="section" id="cocktail-recipe"></div>
     <div class="section" id="favorites"></div>
