Add CSS styling for hover dropdown buttons and edit HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Cocktail Mood Recipes</title>
 </head>
 <body>
-    <div class="hide" id="error-banner"></div>    
+    <div class="hide" id="error-banner"></div> 
     <div class="section" id="image-background">
         <div id="background-img"></div>
     </div> 
@@ -18,9 +18,10 @@
         <h1>Cocktail Mood Recipes</h1>
         <p>Get the cocktail recipe that matches your mood</p> 
     </header>    
-    <div class="section" id="select-cocktail"></div>
-        <div class="What's your mood?">
-            <button class="dropDownBtn" id="mood-btn" >Dropdown</button>
+    <br><br>
+    <div class="cocktailSection" id="select-cocktail"></div>
+        <div class="buttonSelectors">
+            <button class="dropDownBtn" id="mood-btn" >What's Your Mood?</button>
             <div class="dropdown-content">
                 <a href="#">Anxious</a>
                 <a href="#">Glamorous</a>
@@ -30,9 +31,9 @@
                 <a href="#">Stressed</a>
             </div>
 
-            <div class="What's your choice of spirit?">
-                <button class="dropDownBtn" id="mood-btn" >Dropdown</button>
-                <div class="dropdown-content">
+            <div class="buttonSelectors">
+                <button class="hide" class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
+                <div class="hide" class="dropdown-content">
                     <a href="#">Bourbon</a>
                     <a href="#">Brandy</a>
                     <a href="#">Gin</a>
