Fix HTML and CSS for hoverable dropdown

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
         <p>Get the cocktail recipe that matches your mood</p> 
     </header>    
     <br><br>
-    <div class="cocktailSection" id="select-cocktail"></div>
-        <div class="buttonSelectors">
-            <button class="dropDownBtn" id="mood-btn" >What's Your Mood?</button>
-            <div class="dropdown-content">
-                <a href="#">Anxious</a>
-                <a href="#">Glamorous</a>
-                <a href="#">Happy</a>
-                <a href="#">Nervous</a>
-                <a href="#">Relaxed</a>
-                <a href="#">Stressed</a>
+    <div class="cocktailSection" id="select-cocktail">
+            <div class="buttonSelectors">
+                <button class="dropDownBtn" id="mood-btn" >What's Your Mood?</button>
+                <div class="dropdown-content">
+                    <a href="#">Anxious</a>
+                    <a href="#">Glamorous</a>
+                    <a href="#">Happy</a>
+                    <a href="#">Nervous</a>
+                    <a href="#">Relaxed</a>
+                    <a href="#">Stressed</a>
+                </div>
             </div>
 
             <div class="buttonSelectors">
@@ -42,7 +43,8 @@
                     <a href="#">Vodka</a>
                     <a href="#">Whiskey</a>
                 </div>
-        </div>
+            </div>
+    </div>
         
     <div class="section" id="select-cocktail"></div>
     <div class="section" id="cocktail-recipe"></div>
