Remove class hide from HTML error div and buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Cocktail Mood Recipes</title>
 </head>
 <body>
-    <div class="hide" id="error-banner"></div> 
+    <div id="error-banner"></div> 
     <div class="section" id="image-background">
         <div id="background-img"></div>
     </div> 
@@ -33,7 +33,7 @@
             </div>
 
             <div class="buttonSelectors">
-                <button class="hide" class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
+                <button class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
                 <div class="hide" class="dropdown-content">
                     <a href="#">Bourbon</a>
                     <a href="#">Brandy</a>
@@ -45,11 +45,9 @@
                 </div>
             </div>
     </div>
-        
-    <div class="section" id="select-cocktail"></div>
+
     <div class="section" id="cocktail-recipe"></div>
-    <div class="section" id="favorites"></div>
-    <div class="section" id="branding"></div>
+    <div class="section" id="favorites"></div>   
 </body>
 </html>
 
