Assign primary HTML elements to JS variables

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="buttonSelectors">
                 <button class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
-                <div class="hide" class="dropdown-content">
+                <div class="dropdown-content">
                     <a href="#">Bourbon</a>
                     <a href="#">Brandy</a>
                     <a href="#">Gin</a>
