Hide Spirit button spirit-btn element

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="buttonSelectors">
-                <button class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
+                <button hidden class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
                 <div class="dropdown-content">
                     <a href="#">Bourbon</a>
                     <a href="#">Brandy</a>
