--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
             <div class="buttonSelectors">
                 <button class="dropDownBtn" id="mood-btn" >What's Your Mood?</button>
                 <div class="dropdown-content">
-                    <a href="#">Anxious</a>
-                    <a href="#">Glamorous</a>
-                    <a href="#">Happy</a>
-                    <a href="#">Nervous</a>
-                    <a href="#">Relaxed</a>
-                    <a href="#">Stressed</a>
+                    <a class="moodDropBtn" href="#">Anxious</a>
+                    <a class="moodDropBtn" href="#">Glamorous</a>
+                    <a class="moodDropBtn" href="#">Happy</a>
+                    <a class="moodDropBtn" href="#">Nervous</a>
+                    <a class="moodDropBtn" href="#">Relaxed</a>
+                    <a class="moodDropBtn" href="#">Stressed</a>
                 </div>
             </div>
 
             <div class="buttonSelectors">
                 <button hidden class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
                 <div class="dropdown-content">
-                    <a href="#">Bourbon</a>
-                    <a href="#">Brandy</a>
-                    <a href="#">Gin</a>
-                    <a href="#">Tequila</a>
-                    <a href="#">Rum</a>
-                    <a href="#">Vodka</a>
-                    <a href="#">Whiskey</a>
+                    <a class="spiritDropBtn" href="#">Bourbon</a>
+                    <a class="spiritDropBtn" href="#">Brandy</a>
+                    <a class="spiritDropBtn" href="#">Gin</a>
+                    <a class="spiritDropBtn" href="#">Tequila</a>
+                    <a class="spiritDropBtn" href="#">Rum</a>
+                    <a class="spiritDropBtn" href="#">Vodka</a>
+                    <a class="spiritDropBtn" href="#">Whiskey</a>
                 </div>
             </div>
     </div>
