--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <br><br>
     <div class="cocktailSection" id="select-cocktail">
             <div class="buttonSelectors">
-                <button class="dropDownBtn" id="mood-btn" >What's Your Mood?</button>
+                <button class="moodDropDownBtn" id="mood-btn" >What's Your Mood?</button>
                 <div class="dropdown-content">
                     <a class="moodDropBtn" href="#">Anxious</a>
                     <a class="moodDropBtn" href="#">Glamorous</a>
@@ -33,7 +33,7 @@
             </div>
 
             <div class="buttonSelectors">
-                <button hidden class="dropDownBtn" id="spirit-btn" >What's Your Choice of Spirit?</button>
+                <button class="spiritDropDownBtn" id="spirit-btn" hidden>What's Your Choice of Spirit?</button>
                 <div class="dropdown-content">
                     <a class="spiritDropBtn" href="#">Bourbon</a>
                     <a class="spiritDropBtn" href="#">Brandy</a>
