Edit CSS and HTML for recipe card styling

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
     </div>
 
-    <div class="section" id="cocktail-recipe"></div>
+    <div class="recipeSection" id="cocktail-recipe"></div>
     <div class="section" id="favorites"></div>   
 </body>
 </html>
