--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
     </div>
 
     <div class="recipeSection" id="cocktail-recipe"></div>
-    <div class="section" id="favorites"></div>   
+    <div class="section" id="favorites"></div> 
+    <br><br>    
+    <br><br>
+    <br><br>
+    <br><br>
+    <div class="branding">
+        <small>&copy; 2022 <strong>Lauren Tyson</strong></small>
+    </div>
+
 </body>
 </html>
 
