Remove JavaScript rendering favorites div to page. Add to HTML skeleton

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     <div class="recipeSection" id="cocktail-recipe"></div>
     <br><br>    
     <br><br>    
-    <div class="section" id="favorites"></div> 
+    <div class="section" id="favorites">
+        <h2>Your Favorite Drinks</h2>
+    </div> 
     <br><br>    
     <br><br>
     <br><br>
