Add logic to hide/unhide favorites div based on eventlistener

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="recipeSection" id="cocktail-recipe"></div>
     <br><br>    
     <br><br>    
-    <div class="section" id="favorites">
-        <h2>Your Favorite Drinks</h2>
+    <div class="section" id="favorites" hidden>
+        <h2>Your Favorite Drinks:</h2>
     </div> 
     <br><br>    
     <br><br>
