--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <br><br>
     <br><br>
     <br><br>
-    <div class="branding">
+    <footer class="branding">
         <small>&copy; 2022 <strong>Lauren Tyson</strong></small>
-    </div>
+    </footer>
 
 </body>
 </html>
